@@ -206,6 +206,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   even if there are broken link records with source article id 0 in the database
 * (bug 15598) Special:Newpages default limit uses user preference for recentchanges
   limit instead of hardcoded 50.
+* (bug 14638) Special:Blockip now provides a link to the block log if the user has been blocked more than 10 times. Patch by Matt Johnston.
 
 === API changes in 1.14 ===
 
